# agent_system

./: .envrc  .gitignore  .pre-commit-config.yaml  .python-version  CONTRIBUTING.md  QUICKSTART.md  README.md  a2a_collaboration.py  blueprint.json  bootstrap_agent.py  chat_cli.py  chat_gui.py  chat_session.py  cli_usage_notes.md  consolidated_development_roadmap.md  file_manager.py  mkdocs.yml  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  roadmap_prompts.md  testing_quality_roadmap.md  tox.ini
.agent_workspace/: session_bootstrap.json
.github/: PULL_REQUEST_TEMPLATE.md
.streamlit/: config.toml
agent_workspace/: __init__.py  agent_subagent.txt  chat_history.json  context.json  cost_cache.json  debrief_index.md  debrief_task_1.md  debrief_task_11.md  debrief_task_12.md  debrief_task_2.md  debrief_task_3.md  debrief_task_4.md  debrief_task_5.md  debrief_task_6.md  debrief_task_7.md  debrief_task_8.md  debrief_task_9.md  roadmap_progress.txt  task_26_step_1_block1.sh  task_2_step_1_block1.sh  task_3_step_1_scaffold.py  task_3_step_2_block2.py  task_3_step_3_block3.py  task_4_step_1_scaffold.py  task_4_step_2_scaffold.py  task_4_step_3_block3.py  task_5_step_1_block1.py  task_6_step_1_scaffold.py  task_6_step_2_block2.py  task_7_step_1_block1.toml  task_8_step_1_block1.py  task_9_step_1_block1.sh  test_chat_history.json  usage_log.json
docs/: api_reference.md  cli_gitops.md  index.md  multi_agent.md  quality_policy.md  quickstart.md
exec_requests/: credential_request_api_keys_2025-05-14.md
reports/: toolchain_discovery_2025-05-14.md
(+65 files in other folders)
